made minor changes to the overflow issue and scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
-@keyframes wave {
-  0% { transform: rotate(0deg); }
-  15% { transform: rotate(14deg); }
-  30% { transform: rotate(-8deg); }
-  40% { transform: rotate(14deg); }
-  50% { transform: rotate(-4deg); }
-  60% { transform: rotate(10deg); }
-  70% { transform: rotate(0deg); }
-  100% { transform: rotate(0deg); }
+*{
+  font-family: ''Noto Sans', sans-serif';
+  font-weight: 400;
 }
+
+@keyframes wave {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  15% {
+    transform: rotate(14deg);
+  }
+
+  30% {
+    transform: rotate(-8deg);
+  }
+
+  40% {
+    transform: rotate(14deg);
+  }
+
+  50% {
+    transform: rotate(-4deg);
+  }
+
+  60% {
+    transform: rotate(10deg);
+  }
+
+  70% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
 
 .animate-wave {
   animation: wave 2s ease-in-out infinite;
+}
+
+.CustomScrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.CustomScrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.CustomScrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 4px;
+  transition: background-color 3s ease-in-out;
+}
+
+.CustomScrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #9b9999;
 }
